# RaCommerce

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  justfile  pyproject.toml  start.sh
apps/common/: permissions.py
apps/orders/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py
apps/payments/: admin.py  apps.py  models.py  processors.py  serializers.py  tests.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py
apps/payments/providers/: base.py  bkash.py  stripe.py
apps/products/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/products/management/commands/: seed_product.py
apps/products/migrations/: 0001_initial.py  0002_category_product_category.py  0003_category_parent.py  0004_category_slug.py
apps/users/: models.py  serializers.py  views.py
apps/users/management/commands/: seed_users.py
apps/users/migrations/: 0001_initial.py  0002_user_fullname_alter_user_username.py  0003_alter_user_managers.py
config/: settings.py  urls.py
docs/: ERDiagram.md  PaymentFlow.md
