[project]
name = "racommerce"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dj-rest-auth>=7.2.0",
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "django-filter>=26.1",
    "django-lifecycle>=1.3.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.30.0",
    "gunicorn>=26.0.0",
    "markdown>=3.10.2",
    "psycopg[binary,pool]>=3.3.4",
    "pybkash>=0.3.0",
    "redis[hiredis]>=8.0.1",
    "requests>=2.34.2",
    "ruff>=0.15.21",
    "stripe>=15.3.0",
]

[tool.ruff]
exclude = [
    "*/migrations/*.py",
]

[dependency-groups]
dev = [
    "djangorestframework-stubs>=3.17.0",
]
